added doc support for passing salary
update swagger doc - salary included in response
