# docs/swagger.json
@@ -89,6 +89,10 @@
                     "type": "number",
                     "example": 0.15
                 },
+                "salary": {
+                    "type": "number",
+                    "example": 55000
+                },
                 "taxes_by_band": {
                     "type": "array",
                     "items": {
